--- a/example/index.html
+++ b/example/index.html
@@ -22,6 +22,8 @@
             const c = element('div').addDom(p).preap(document.body);
 
             element('p').t('Added after').f().aftap(c.dom);
+
+            element('div').add('span').add('p').t('Nested').close().ap(document.body);
         </script>
     </body>
 
